# fixtrate

./: .gitignore  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements-docs.txt  setup.py
docs/: Makefile  conf.py  index.rst  install.rst  make.bat  session.rst  session_quickstart.rst
docs/api/: fixtrate.factories.rst  fixtrate.rst  fixtrate.store.rst  modules.rst
docs/source/: conf.py  index.rst  install.rst  session_quickstart.rst
etc/: fixation.service
examples/: client.py
fixation/: adapter.py  cli.py  client.py  config.py  constants.py  daemon.py  dictionary.py  exceptions.py  message.py  parse.py  rpc.py  session.py  signals.py  store.py  tags.py  utils.py  values.py  version.py
fixation/factories/: base.py  fix42.py  fix44.py
fixtrate/: __init__.py  __version__.py  config.py  constants.py  dictionary.py  engine.py  exceptions.py  fsid.py  helpers.py  message.py  parse.py  peer.py  server.py  session.py  session_id.py  signals.py  store.py  transport.py  types.py  utils.py
fixtrate/cli/: gen_types.py  main.py
fixtrate/factories/: base.py  fix42.py  fix44.py
fixtrate/fix42/: advertisement.py  allocation.py  allocation_instruction_ack.py  bid_request.py  bid_response.py  business_message_reject.py  data.py  dont_know_trade.py  email.py  execution_report.py  heartbeat.py  i_o_i.py  list_cancel_request.py  list_execute.py  list_status.py  (+34 more)
tests/: conftest.py  gemini-fix-dictionary.xml  pytest.ini  server.py  test_dictionary.py  test_engine.py  test_message.py  test_peer.py  test_rpc.py  test_session.py  test_types.py  utils.py
(+31 files in other folders)
